<?php
namespace DesignPatterns\Creational\Builder;

class Product extends AbstractProduct
{
    public function setPart1()
    {
        // TODO: Implement setPart1() method.
    }

    public function setPart2()
    {
        // TODO: Implement setPart2() method.
    }

    public function run()
    {
        // TODO: Implement run() method.
    }
}